// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`com.mgmtp.a12.widgets.contentbox.action-contentbox > rendering-action-contentbox 1`] = `
.c2 {
  align-items: center;
  box-sizing: border-box;
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  position: relative;
  border-radius: 0px;
  gap: 8px;
  background-color: inherit;
  border-width: medium;
  border-style: none;
  border-color: currentcolor;
  border-image: initial;
  min-height: 0px;
  padding: 24px 0px 4px;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.c0 {
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
  flex-direction: column;
  flex: 1 1 100%;
  height: 100%;
  line-height: 1.45;
  max-width: 100%;
  min-height: 0px;
  outline: transparent solid 1px;
  box-shadow: none;
  background-color: transparent;
  padding: 0px 16px;
}

.c5 {
  box-sizing: border-box;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  flex: 1 1 100%;
  min-height: 64px;
  overflow: hidden auto;
  background-color: rgb(255, 255, 255);
  padding: 0px 24px 24px;
}

.c5:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c4 {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  max-height: 200px;
  transition: max-height 0.6s ease-in-out;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
}

.c3 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-bIaFkb .c3.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-bIaFkb .c3.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

<div
  aria-label="test-aria-label"
  class="c0 contentbox contentbox--embedded test-class"
  data-role="contentbox"
  id="test-id"
  role="test-role"
  style="color: red;"
  tabindex="-1"
>
  <div
    class="c1 contentbox__header"
    data-role="contentbox-header"
  >
    <div
      class="c2 contentbox__heading"
      data-role="contentbox-heading"
      id="test-id--heading"
    >
      <div
        class="c3"
      >
        test
      </div>
    </div>
    <div
      class="c4 contentbox__wizard-bar"
      data-role="contentbox-wizard-bar"
    >
      test
    </div>
    test
  </div>
  <div
    class="c5 contentbox__content"
    data-role="contentbox-content"
    style="padding: 20px;"
  >
    test
  </div>
  test
</div>
`;

exports[`com.mgmtp.a12.widgets.contentbox.action-contentbox > rendering-heading-subheading-action-content-box 1`] = `
.c9 {
  align-items: center;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border: 2px solid transparent;
  border-radius: 0px;
  padding: 0px 8px;
  position: relative;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c9:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c9.c9 {
  display: block;
  height: auto;
  min-height: 0px;
}

.c2 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-fvsTKU .c2.c2 {
  padding: 0px 24px;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.c0 {
  background-color: rgb(255, 255, 255);
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
  flex-direction: column;
  flex: 1 1 100%;
  height: 100%;
  line-height: 1.45;
  max-width: 100%;
  min-height: 0px;
  outline: transparent solid 1px;
  padding: 0px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

.c11 {
  box-sizing: border-box;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  flex: 1 1 100%;
  min-height: 64px;
  overflow: hidden auto;
  background-color: rgb(255, 255, 255);
  padding: 0px 24px 24px;
}

.c11:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

[data-role="modal-overlay-content"] .c11.c11 {
  padding: 0px 24px 24px;
}

[data-role="modal-overlay-content"] [data-role="filter-selector-content-secondary"] .c11.c11 {
  padding: 16px;
}

.c8 {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  order: -1;
}

.c10 {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  order: 1;
  flex-grow: 1;
  justify-content: flex-end;
}

.c7 {
  display: flex;
  flex-grow: 1;
  max-width: 100%;
  gap: 8px;
}

.c3 {
  align-items: center;
  display: flex;
  gap: 8px;
}

.c4 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-bIaFkb .c4.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-bIaFkb .c4.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

.c5 {
  display: flex;
  flex-direction: column;
}

.c5 > :not(:empty):not(.sc-iBPUmU) {
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid transparent;
}

.c6 {
  align-items: center;
  box-sizing: border-box;
  background-color: rgb(241, 242, 244);
  display: flex;
  min-height: 48px;
  padding: 2px 24px;
}

.c6 > :not(:last-child):not(:only-child):not(.StyledGrid-sc-kbazOb) {
  margin: 0px 16px 0px 0px;
}

@media (pointer: coarse) {
  .c9:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c9:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c9:hover {
    outline: transparent solid 1px;
  }
}

<div
  class="c0 contentbox"
  data-role="contentbox"
  tabindex="-1"
>
  <div
    class="c1 contentbox__header"
    data-role="contentbox-header"
  >
    <div
      class="c2 contentbox__heading"
      data-role="contentbox-heading"
    >
      <div
        class="c3 contentbox__addon-prefix"
        data-role="contentbox-addon-prefix"
      >
        test
      </div>
      <div
        class="c4"
      >
        test
      </div>
      <div
        class="c3 contentbox__addon-suffix"
        data-role="contentbox-addon-suffix"
      >
        test
      </div>
    </div>
    <div
      class="c5 contentbox__subheading"
      data-role="contentbox-subheading"
    >
      test
      <div
        class="c6 contentbox__subheadingActionBar"
        data-role="contentbox-action-bar"
      >
        <div
          class="c7 button-group-container"
          data-role="button-group-container"
        >
          <div
            class="c8 button-group h_floatLeft button-group--left"
            data-role="button-group"
          >
            <button
              class="c9 button button--secondary"
              data-role="button"
              title=""
              type="button"
            >
              <span
                data-role="button-label"
              >
                Action 1
              </span>
            </button>
          </div>
          <div
            class="c10 button-group h_floatRight button-group--right"
            data-role="button-group"
          >
            <button
              class="c9 button button--secondary"
              data-role="button"
              title=""
              type="button"
            >
              <span
                data-role="button-label"
              >
                Action 2
              </span>
            </button>
          </div>
        </div>
      </div>
      test
      test
    </div>
  </div>
  <div
    class="c11 contentbox__content contentbox__content--initial-padding"
    data-role="contentbox-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.contentbox.action-contentbox.template > desktop > render-no-back-button-when-no-context-defined 1`] = `
.c2 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-fvsTKU .c2.c2 {
  padding: 0px 24px;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  flex: 1 0 auto;
}

.c0 {
  background-color: rgb(255, 255, 255);
  border-radius: 0px;
  color: rgb(77, 77, 77);
  display: flex;
  font-size: 0.75rem;
  font-family: "Open Sans", sans-serif;
  flex-direction: column;
  flex: 1 1 100%;
  height: 100%;
  line-height: 1.45;
  max-width: 100%;
  min-height: 0px;
  outline: transparent solid 1px;
  padding: 0px;
  box-shadow: rgba(22, 25, 29, 0.4) 0px 1px 2px 0px;
}

.c4 {
  box-sizing: border-box;
  border-radius: 0px;
  color: rgb(77, 77, 77);
  font-size: 0.75rem;
  flex: 1 1 100%;
  min-height: 64px;
  overflow: hidden auto;
  background-color: rgb(255, 255, 255);
  padding: 0px 24px 24px;
}

.c4:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

[data-role="modal-overlay-content"] .c4.c4 {
  padding: 0px 24px 24px;
}

[data-role="modal-overlay-content"] [data-role="filter-selector-content-secondary"] .c4.c4 {
  padding: 16px;
}

.c3 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-bIaFkb .c3.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-bIaFkb .c3.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

<div
  class="c0 contentbox"
  data-role="contentbox"
  tabindex="-1"
>
  <div
    class="c1 contentbox__header"
    data-role="contentbox-header"
  >
    <div
      class="c2 contentbox__heading"
      data-role="contentbox-heading"
    >
      <div
        class="c3"
      >
        test
      </div>
    </div>
  </div>
  <div
    class="c4 contentbox__content contentbox__content--initial-padding"
    data-role="contentbox-content"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.contentbox.action-contentbox.template > desktop > rendering-action-bar 1`] = `
.c3 {
  align-items: center;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border: 2px solid transparent;
  border-radius: 0px;
  padding: 0px 8px;
  position: relative;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c3:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c3.c3 {
  display: block;
  height: auto;
  min-height: 0px;
}

.c2 {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  order: -1;
}

.c4 {
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  order: 1;
  flex-grow: 1;
  justify-content: flex-end;
}

.c1 {
  display: flex;
  flex-grow: 1;
  max-width: 100%;
  gap: 8px;
}

.c0 {
  align-items: center;
  box-sizing: border-box;
  background-color: rgb(241, 242, 244);
  display: flex;
  min-height: 48px;
  padding: 2px 24px;
}

.c0 > :not(:last-child):not(:only-child):not(.StyledGrid-sc-kbazOb) {
  margin: 0px 16px 0px 0px;
}

@media (pointer: coarse) {
  .c3:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c3:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c3:hover {
    outline: transparent solid 1px;
  }
}

<div
  class="c0 contentbox__subheadingActionBar test-class"
  data-role="contentbox-action-bar"
  id="test-id"
  style="color: red;"
>
  <div
    class="c1 button-group-container"
    data-role="button-group-container"
  >
    <div
      class="c2 button-group h_floatLeft button-group--left"
      data-role="button-group"
    >
      <button
        class="c3 button button--secondary"
        data-role="button"
        title=""
        type="button"
      >
        <span
          data-role="button-label"
        >
          Action 1
        </span>
      </button>
    </div>
    <div
      class="c4 button-group h_floatRight button-group--right"
      data-role="button-group"
    >
      <button
        class="c3 button button--secondary"
        data-role="button"
        title=""
        type="button"
      >
        <span
          data-role="button-label"
        >
          Action 2
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.contentbox.action-contentbox.template > desktop > rendering-heading 1`] = `
.c0 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-fvsTKU .c0.c0 {
  padding: 0px 24px;
}

.c1 {
  align-items: center;
  display: flex;
  gap: 8px;
}

.c2 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-bIaFkb .c2.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-bIaFkb .c2.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

<div
  class="c0 contentbox__heading test-class"
  data-role="contentbox-heading"
  id="test-id"
  style="color: red;"
>
  <div
    class="c1 contentbox__addon-prefix"
    data-role="contentbox-addon-prefix"
  >
    prefix
  </div>
  <div
    class="c2"
  >
    <div
      id="headingElement"
    >
      heading element
    </div>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.contentbox.action-contentbox.template > desktop > rendering-heading-with-subtitles 1`] = `
.c0 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-fvsTKU .c0.c0 {
  padding: 0px 24px;
}

.c1 {
  align-items: center;
  display: flex;
  gap: 8px;
}

.c2 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-bIaFkb .c2.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-bIaFkb .c2.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

<div
  class="c0 contentbox__heading test-class"
  data-role="contentbox-heading"
  id="test-id"
  style="color: red;"
>
  <div
    class="c1 contentbox__addon-prefix"
    data-role="contentbox-addon-prefix"
  >
    prefix
  </div>
  <div
    class="c2"
  >
    <div
      id="headingElement"
    >
      heading element
    </div>
    <p
      id="subtitle"
    >
      heading subtitle
    </p>
  </div>
</div>
`;

exports[`com.mgmtp.a12.widgets.contentbox.action-contentbox.template > desktop > rendering-sub-heading 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
}

.c0 > :not(:empty):not(.sc-iBPUmU) {
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid transparent;
}

<div
  class="c0 contentbox__subheading test-class"
  data-role="contentbox-subheading"
  id="test-id"
  style="color: red;"
>
  <div
    id="navigation"
  />
  <div
    id="subActionBar"
  />
  <div
    id="breadcrumbs"
  />
</div>
`;

exports[`com.mgmtp.a12.widgets.contentbox.action-contentbox.template > mobile > should have default headerTitle combination content box 1`] = `
.c12 {
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100vw;
}

.c11 {
  box-sizing: border-box;
  color: rgb(127, 140, 155);
  display: inline-block;
  direction: ltr;
  font-family: "Material Symbols Outlined";
  font-variation-settings: "FILL" 1, "wght" 400, "GRAD" 0, "opsz" 24;
  font-size: 1rem;
  font-style: normal;
  font-weight: 400;
  letter-spacing: normal;
  line-height: 1;
  text-transform: none;
  white-space: nowrap;
  overflow-wrap: normal;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizelegibility;
  font-feature-settings: "liga";
}

.c11 > span {
  display: inline-block;
}

.c11.c11 {
  max-width: unset;
}

.c21 {
  align-items: center;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-size: 0.75rem;
  font-weight: 700;
  gap: 4px;
  outline: none;
  text-transform: uppercase;
  min-height: 32px;
  vertical-align: middle;
  border: 2px solid transparent;
  border-radius: 0px;
  padding: 0px 8px;
  position: relative;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c21 .c10 {
  user-select: none;
}

.c21 .c10 {
  color: inherit;
}

.c21:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: rgb(255, 255, 255);
  box-shadow: none;
  color: rgb(213, 0, 117);
  text-decoration: none;
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c21.c21 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c21.c21 > .c10 {
  display: block;
}

.c8 {
  align-items: center;
  border: 2px solid transparent;
  cursor: pointer;
  display: inline-flex;
  justify-content: center;
  font-family: "Open Sans", sans-serif;
  font-weight: 700;
  gap: 4px;
  outline: none;
  position: relative;
  text-transform: uppercase;
  vertical-align: middle;
  border-radius: 50%;
  flex-shrink: 0;
  font-size: 1.125rem;
  height: 2rem;
  min-height: 0px;
  padding: 0px;
  width: 2rem;
  background: transparent;
  color: rgb(5, 104, 174);
}

.c8 .c10 {
  user-select: none;
}

.c8 .c10 {
  color: inherit;
}

.c8 .c10 {
  font-size: inherit;
}

.c8:not(:disabled):focus {
  outline: rgb(51, 51, 51) dotted 1px;
  background-color: transparent;
  box-shadow: none;
  color: rgb(213, 0, 117);
  border: 2px solid rgb(213, 0, 117);
}

.h_inlineBlock.h_middleAlign .c8.c8 {
  display: block;
  height: auto;
  min-height: 0px;
}

.h_inlineBlock.h_middleAlign .c8.c8 > .c10 {
  display: block;
}

.c6 {
  display: inline-block;
  font-size: 0px;
  -webkit-tap-highlight-color: transparent;
}

.c6 .c10 {
  position: relative;
}

.c6 .c10::before {
  inset: 0px;
  position: absolute;
}

.c6 .c10:focus {
  outline: none;
}

.c6 .c10:focus::before {
  content: "";
  outline: rgb(51, 51, 51) dotted 1px;
}

.c18 {
  background: rgb(255, 255, 255);
  display: flex;
  min-height: 48px;
  padding: 2px 8px 2px 16px;
  position: sticky;
  top: 0px;
  z-index: 1;
  align-items: center;
}

.c19 {
  align-items: center;
  font-weight: 700;
  margin: 0px auto 0px 0px;
}

.c16 {
  background: rgb(255, 255, 255);
  max-width: 100%;
  min-width: 168px;
  isolation: isolate;
  outline: transparent solid 1px;
  overflow: hidden auto;
  -webkit-tap-highlight-color: transparent;
  border-radius: 8px 8px 0px 0px;
  bottom: 0px;
  max-height: 90%;
  position: fixed;
  width: 100%;
  animation-duration: 400ms;
}

[data-role="tab-panel-sub-tab-list"] .c16.c16 {
  min-width: 52px;
}

.c16.popup-enter {
  opacity: 0;
}

.c16.popup-enter-active {
  opacity: 1;
  animation-name: k1;
}

.c16.popup-exit {
  opacity: 1;
}

.c16.popup-exit-active {
  opacity: 0;
  animation-name: k2;
}

.c17 {
  border-top: 1px solid rgb(226, 230, 233);
  border-left: 1px solid rgb(226, 230, 233);
  list-style: none;
  margin: 0px;
  max-height: 252px;
  padding: 0px;
}

.c20 {
  border-bottom: 1px solid rgb(226, 230, 233);
  height: 52px;
}

.c20:last-child {
  border-bottom-width: medium;
  border-bottom-style: none;
  border-bottom-color: currentcolor;
}

.c20 .c7 {
  background: transparent;
  border-radius: 0px;
  box-shadow: none;
  color: rgb(77, 77, 77);
  font-size: 1rem;
  font-weight: 400;
  height: 100%;
  text-align: left;
  white-space: nowrap;
  width: 100%;
  justify-content: flex-start;
  padding: 16px 24px;
  text-transform: none;
}

.c20 .c7 .c10 {
  font-size: 1.25rem;
  height: 24px;
  display: inline-flex;
  align-items: center;
}

.c20 .c7:disabled {
  background: rgb(226, 230, 233);
  color: rgb(169, 179, 188);
  cursor: auto;
}

.c1 {
  align-items: center;
  background-color: rgb(78, 89, 101);
  box-sizing: border-box;
  border-bottom: 1px solid rgba(22, 25, 29, 0.22);
  border-top: 1px solid rgba(255, 255, 255, 0.32);
  display: flex;
  font-size: 1rem;
  line-height: 1.45;
  min-height: 48px;
  padding: 0px 24px;
  position: relative;
  border-radius: 0px;
  gap: 8px;
}

.StyledMasterDetailLayoutView-fvsTKU .c1.c1 {
  padding: 0px 24px;
}

.c4 .c5 .c7 {
  color: rgb(255, 255, 255);
}

.c4 .c5 .c7:focus {
  outline: rgb(51, 51, 51) dotted 1px;
}

.c13 {
  align-items: center;
  background: rgba(22, 25, 29, 0.4);
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  left: 0px;
  position: fixed;
  top: 0px;
  width: 100%;
}

.c15 {
  -webkit-tap-highlight-color: transparent;
  display: flex;
  margin: 24px;
  outline: transparent solid 1px;
  overflow: auto;
  flex-shrink: 1;
  align-items: center;
  background-color: transparent;
  height: 100%;
  justify-content: center;
  position: relative;
  width: calc(100% - 48px);
}

.c15 > * {
  background-color: rgb(255, 255, 255);
  overflow: auto;
}

.c15 .c0 {
  min-height: 48px;
}

.c14 {
  opacity: 1;
  animation-name: k0;
  animation-duration: 400ms;
}

.c2 {
  align-items: center;
  display: flex;
  gap: 8px;
}

.c3 {
  flex: 1 1 0%;
  flex-direction: column;
  padding: 8px 0px;
}

.StyledMasterDetailLayoutPane-bIaFkb .c3.masterDetailLayoutPane--enter,
.StyledMasterDetailLayoutPane-bIaFkb .c3.masterDetailLayoutPane--exit {
  flex: 1 0 auto;
}

.c9.c9 {
  background: transparent;
  color: rgb(255, 255, 255);
}

.c9.c9:not(:disabled):focus {
  outline: rgb(255, 255, 255) dotted 1px;
  background-color: rgba(0, 0, 0, 0.2);
  box-shadow: none;
  color: rgb(255, 255, 255);
  border: 2px solid rgb(255, 255, 255);
}

@media (pointer: coarse) {
  .c21:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c21:not(:disabled):hover {
    background-color: rgb(255, 255, 255);
    box-shadow: none;
    color: rgb(213, 0, 117);
    text-decoration: none;
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c21:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c8:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c8:not(:disabled):hover {
    background-color: transparent;
    box-shadow: none;
    color: rgb(213, 0, 117);
    border: 2px solid rgb(213, 0, 117);
  }
}

@media (pointer: fine) {
  .c8:hover {
    outline: transparent solid 1px;
  }
}

@media (pointer: coarse) {
  .c20:active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background: rgb(241, 242, 244);
    box-shadow: none;
  }
}

@media (pointer: fine) {
  .c20:hover {
    background: rgb(241, 242, 244);
    box-shadow: none;
  }
}

@media only screen and (max-width: 756px) {
  .c15 {
    width: calc(100% - 48px);
  }
}

@media (pointer: coarse) {
  .c9.c9:not(:disabled):active {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    background-color: rgba(0, 0, 0, 0.2);
    box-shadow: none;
    color: rgb(255, 255, 255);
    border: 2px solid rgb(255, 255, 255);
  }
}

@media (pointer: fine) {
  .c9.c9:not(:disabled):hover {
    background-color: rgba(0, 0, 0, 0.2);
    box-shadow: none;
    color: rgb(255, 255, 255);
    border: 2px solid rgb(255, 255, 255);
  }
}

@keyframes k0 {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes k1 {
  0% {
    bottom: -100px;
    opacity: 0;
  }

  100% {
    bottom: 0px;
    opacity: 1;
  }
}

@keyframes k2 {
  0% {
    bottom: 0px;
    opacity: 1;
  }

  100% {
    bottom: -100px;
    opacity: 0;
  }
}

<div>
  <div
    class="c0 c1 contentbox__heading test-class"
    data-role="contentbox-heading"
    id="test-id"
    style="color: red;"
  >
    <div
      class="c2 contentbox__addon-prefix"
      data-role="contentbox-addon-prefix"
    >
      prefix
    </div>
    <div
      class="c3"
    >
      <div
        id="headingElement"
      >
        heading element
      </div>
      <p
        id="subtitle"
      >
        heading subtitle
      </p>
    </div>
    <div
      class="c2 contentbox__addon-suffix"
      data-role="contentbox-addon-suffix"
    >
      <div
        class="c4 contentbox__addon"
        data-role="contentbox-addon"
      >
        <div
          class="c5 c6 popup"
          data-role="popup"
        >
          <button
            aria-expanded="true"
            aria-label="Close actions menu"
            class="c7 c8 button button--icon c9"
            data-role="popup-trigger-element"
            data-type="icon"
            title="Close actions menu"
            type="button"
          >
            <i
              class="c10 c11 plasma-icon"
              data-role="plasma-icon"
            >
              <span
                aria-hidden="true"
              >
                more_vert
              </span>
            </i>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c12"
    data-role="portal-placeholder"
  >
    <div
      class="portal base"
      data-role="portal"
    >
      <div>
        <div
          class="c13 modalOverlay--fullscreen modalOverlay modalOverlay--mobile c14"
          data-role="modal-overlay"
        >
          <div
            aria-modal="true"
            class="c15 modalOverlay__container"
            data-role="modal-overlay-content"
            role="dialog"
            style="outline: transparent solid 1px;"
            tabindex="-1"
          >
            <ul
              class="c16 c17 popup__menu"
              data-role="popup-menu"
            >
              <div
                class="c18"
                data-role="popup-header-wrapper"
              >
                <div
                  aria-level="1"
                  class="c19"
                  data-role="popup-header-title"
                  role="heading"
                >
                  Actions
                </div>
                <button
                  aria-label="Close menu"
                  class="c7 c8 button button--icon"
                  data-role="popup-close-button"
                  data-type="icon"
                  title="Close menu"
                  type="button"
                >
                  <i
                    class="c10 c11 plasma-icon"
                    data-role="plasma-icon"
                  >
                    <span
                      aria-hidden="true"
                    >
                      close
                    </span>
                  </i>
                </button>
              </div>
              <li
                class="c20 popup__item"
                data-role="popup-item"
              >
                <button
                  class="c7 c21 button button--secondary"
                  data-role="button"
                  title=""
                  type="button"
                >
                  <span
                    data-role="button-label"
                  >
                    Action 1
                  </span>
                </button>
              </li>
              <li
                class="c20 popup__item"
                data-role="popup-item"
              >
                <button
                  class="c7 c21 button button--secondary"
                  data-role="button"
                  title=""
                  type="button"
                >
                  <span
                    data-role="button-label"
                  >
                    Action 2
                  </span>
                </button>
              </li>
            </ul>
          </div>
          <div
            class="tab-sandbox-supporter"
            data-role="tab-sandbox-supporter"
            tabindex="0"
          />
        </div>
        <div
          class="c12"
          data-role="portal-placeholder"
        />
      </div>
    </div>
  </div>
</div>
`;
